--- a/application/views/ProductsPage.html
+++ b/application/views/ProductsPage.html
@@ -1,9 +1,7 @@
-{% extends "base.html" %} 
-{% block title %}{{title}}{% endblock %} 
-{% block content %}
-	<ul>
-		{% for item in prod %}
-			<li>{{item.Name}}</li>
-		{% endfor %}
-	</ul>
+{% extends "base.html" %} {% block title %}{{title}}{% endblock %} {% block content %}
+<ul>
+    {% for item in prod %}
+    <li>{{item.Name}}</li>
+    {% endfor %}
+</ul>
 {% endblock %}
