--- a/application/views/base.html
+++ b/application/views/base.html
@@ -10,7 +10,8 @@
     <header class="header-container clearfix">
         <div class="logo"></div>
     </header>
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
 </body>
 
 </html>
