--- a/application/views/ProductsPage.html
+++ b/application/views/ProductsPage.html
@@ -1,17 +1,22 @@
-{% extends "base.html" %} 
-    {% block title %}
-        {{title}}
-    {% endblock %} 
-{% block content %} 
-    {% for item in prod %}
-    <aside>
-        <div class="content-data">
-            <img align="left" hspace="5" src="{{item.Image}}">
-            <p>Название - {{item.Name}}</p>
-            <p>Количество - {{item.Count}}</p>
-            <p>Цена за штуку - {{item.Price}}</p>
-            <p>Описание - {{item.Description}}</p>
-        </div>
-    </aside>
-    {% endfor %} 
+{% extends "base.html" %}
+{% block title %}
+	{{title}}
+{% endblock %}
+{% block content %}
+
+	{% for item in prod %}
+		<aside>
+			<div class="content-data">
+				<img align="left" hspace="5" src="{{item.Image}}">
+				<p>Название -
+					{{item.Name}}</p>
+				<p>Количество -
+					{{item.Count}}</p>
+				<p>Цена за штуку -
+					{{item.Price}}</p>
+				<p>Описание -
+					{{item.Description}}</p>
+			</div>
+		</aside>
+	{% endfor %}
 {% endblock %}
