--- a/application/views/ProductsPage.html
+++ b/application/views/ProductsPage.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
+
 {% block title %}
 	{{title}}
 {% endblock %}
+
+{% block head %}
+	{{ parent() }}
+	<link rel="stylesheet" href="../../styles/catalog-border.css">
+{% endblock %}
+
 {% block content %}
 
 	{% for item in prod %}
