--- a/application/views/SignIn.html
+++ b/application/views/SignIn.html
@@ -6,8 +6,10 @@
 
 {% block head %}
 	{{ parent() }}
-	<link rel="stylesheet" href="../../styles/signup.css">
+	<link rel="stylesheet" href="../../styles/signin.css">
 
 {% endblock %}
 
-{% block content %}{% endblock %}
+{% block content %}
+	<p>ter</p>
+{% endblock %}
