--- a/application/views/SignUp.html
+++ b/application/views/SignUp.html
@@ -10,28 +10,24 @@
 
 {% endblock %}
 {% block content %}
-	<div class="form-block">
-		<form action="{{ auth.signup }}" method="post" accept-charset="UTF-8">
-			<h3>SignUp</h3>
-			<div class="form-group">
-				<label for="email">
-					Email
-				</label><br/>
-				<input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control">
-			</div>
-			<div class="form-group">
-				<label for="name">
-					Name
-				</label><br/>
-				<input type="text" name="name" id="name" class="form-control">
-			</div>
-			<div class="form-group">
-				<label for="password">
-					Password
-				</label><br/>
-				<input type="password" name="password" id="password" class="form-control">
-			</div>
-			<button type="submit" class="btn">SignUp</button>
-		</form>
-	</div>
+	<form method="post" accept-charset="UTF-8">
+
+		<input type="hidden" name="action" value="users/send-password-reset-email">
+
+
+		<h3>
+			<label for="loginName">Username or email</label>
+		</h3>
+		<input id="loginName" type="text" name="loginName" value="{% if loginName is defined %}{{ loginName }}{% else %}{{ craft.app.user.rememberedUsername }}{% endif %}">
+
+		{% if errors is defined %}
+			<ul class="errors">
+				{% for error in errors %}
+					<li>{{ error }}</li>
+				{% endfor %}
+			</ul>
+		{% endif %}
+
+		<input type="submit" value="Submit">
+	</form>
 {% endblock %}
