--- a/application/views/SignUp.html
+++ b/application/views/SignUp.html
@@ -32,7 +32,7 @@
 					Password
 				</label><br/>
 				<input type="password" name="password" id="password" class="form-control">
-			</div>
+			</div><br/>
 			<button type="submit" class="btn">SignUp</button>
 		</form>
 	</div>
