--- a/application/views/base.html
+++ b/application/views/base.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html>
 
-	<head>
-		{% block head %}
-			<title>
-				{% block title %}{% endblock %}
-			</title>
-			<link rel="stylesheet" href="../../styles/style.css">
-		{% endblock %}
-	</head>
+<head>
+    {% block head %}
+    <title>
+        {% block title %}{% endblock %}
+    </title>
+    <link rel="stylesheet" href="../../styles/style.css"> {% endblock %}
+</head>
 
-	<body>
-		<header class="header-container clearfix">
-			<div class="logo"></div>
-		</header>
-		<main class="main-container">
-			<div class="main-container-header">
-				<img src="images/store.svg">
-				<span>IlyasStore &#9679
+<body>
+    <header class="header-container clearfix">
+        <div class="logo"></div>
+    </header>
+    <main class="main-container">
+        <div class="main-container-header">
+            <img src="../../images/store.svg">
+            <span>IlyasStore &#9679
 					{{title}}</span>
-			</div>
-			<div class="main-container-navigation">
-				<ul>
-					{% for item in nav_list %}
-						<li>
-							<a href="{{item.href}}">{{item.content}}</a>
-						</li>
-					{% endfor %}
-				</ul>
-			</div>
-		</main>
-		{% block content %}{% endblock %}
-	</body>
+        </div>
+        <div class="main-container-navigation">
+            <ul>
+                {% for item in nav_list %}
+                <li>
+                    <a href="{{item.href}}">{{item.content}}</a>
+                </li>
+                {% endfor %}
+            </ul>
+        </div>
+    </main>
+    {% block content %}{% endblock %}
+</body>
 
 </html>
