--- a/styles/style.css
+++ b/styles/style.css
@@ -146,3 +146,60 @@ form h3 {
     color: white;
     background-color: #2e241f;
 }
+
+.topmenu:after {
+    content: "";
+    clear: both;
+}
+
+.topmenu>li {
+    position: relative;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.topmenu>li>a {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    color: #643c24;
+}
+
+.topmenu li a:hover {
+    color: #D5B45B;
+}
+
+.submenu-link:after {
+    content: " ⇓";
+    font-family: "FontAwesome";
+    color: inherit;
+}
+
+.submenu {
+    background: #802424;
+    position: absolute;
+    left: 0;
+    top: 100%;
+    z-index: 5;
+    width: 150px;
+    opacity: 0;
+    transform: scaleY(0);
+    transform-origin: 0 0;
+    transition: .5s ease-in-out;
+}
+
+.submenu a {
+    color: white;
+    text-align: left;
+    padding: 12px 15px;
+    font-size: 13px;
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
+}
+
+.submenu li:last-child a {
+    border-bottom: none;
+}
+
+.topmenu>li:hover .submenu {
+    opacity: 1;
+    transform: scaleY(1);
+}
