--- a/application/views/base.html
+++ b/application/views/base.html
@@ -30,7 +30,7 @@
 								<ul class="submenu">
 									{% for cat in catalog_buff %}
 										<li>
-											<a href="{{cat.id}}">{{cat.Name}}</a>
+											<a style="border:none;" href="/catalog/{{cat.id}}">{{cat.Name}}</a>
 										</li>
 									{% endfor %}
 								</ul>
