--- a/application/views/SignUp.html
+++ b/application/views/SignUp.html
@@ -12,26 +12,29 @@
 {% block content %}
 	<div class="form-block">
 
-		<form action="{{ auth.signup }}" method="post" accept-charset="UTF-8">
+		<form action="{{ auth.signup }}" method="post" autocomplete="off">
 			<h3>SignUp</h3>
 			<div class="form-group">
 
-				<label for="email">
-					Email
-				</label><br/>
-				<input type="email" name="email" id="email" placeholder="you@domain.com" class="form-control">
-			</div>
-			<div class="form-group">
-				<label for="name">
+				<label for="Name">
 					Name
 				</label><br/>
-				<input type="text" name="name" id="name" class="form-control">
+				<input type="text" name="Name" id="Name" class="form-control">
+
 			</div>
 			<div class="form-group">
-				<label for="password">
+
+				<label for="Email">
+					Email
+				</label><br/>
+				<input type="Email" name="Email" id="Email" placeholder="you@domain.com" class="form-control">
+
+			</div>
+			<div class="form-group">
+				<label for="Password">
 					Password
 				</label><br/>
-				<input type="password" name="password" id="password" class="form-control">
+				<input type="Password" name="Password" id="Password" class="form-control">
 			</div><br/>
 			<button type="submit" class="btn">SignUp</button>
 		</form>
