--- a/styles/style.css
+++ b/styles/style.css
@@ -175,7 +175,7 @@ form h3 {
 }
 
 .submenu {
-    background: #802424;
+    background: #a70202d2;
     position: absolute;
     left: 0;
     top: 100%;
@@ -189,7 +189,7 @@ form h3 {
 
 .submenu a {
     color: white;
-    text-align: left;
+    text-align: center;
     padding: 12px 15px;
     font-size: 13px;
     border-bottom: 1px solid rgba(255, 255, 255, .1);
