submenu style complete

--- a/application/views/base.html
+++ b/application/views/base.html
@@ -29,8 +29,8 @@
 								<a class="submenu-link" href="{{item.href}}">{{item.content}}</a>
 								<ul class="submenu">
 									{% for cat in catalog_buff %}
-										<li>
-											<a style="border:none;" href="/catalog/{{cat.id}}">{{cat.Name}}</a>
+										<li style="text-align:center;">
+											<a style="color:black;border:none;" href="/catalog/{{cat.id}}">{{cat.Name}}</a>
 										</li>
 									{% endfor %}
 								</ul>
