--- a/styles/style.css
+++ b/styles/style.css
@@ -176,12 +176,14 @@ form h3 {
 
 .submenu {
     background: #ff9966;
+    border-radius: 5px;
+    border-bottom: none;
     position: absolute;
     float: left;
-    right: 14.5px;
+    right: 14px;
     top: 32px;
     z-index: 5;
-    width: 50px;
+    width: 52px;
     opacity: 0;
     transform: scaleY(0);
     transform-origin: 0 0;
