--- a/application/views/base.html
+++ b/application/views/base.html
@@ -38,15 +38,30 @@
 
 
 						{% else %}
-							<li>
-								<a href="{{item.href}}">{{item.content}}</a>
-							</li>
+							{% if (item.content != 'Sign In' and item.content != 'Sign Up') and auth.check %}
+								<li>
+									<a href="{{item.href}}">{{item.content}}</a>
+								</li>
+							{% elseif not auth.check %}
+								<li>
+									<a href="{{item.href}}">{{item.content}}</a>
+								</li>
+							{% endif %}
 						{% endif %}
 					{% endfor %}
+					{% if auth.check %}
+						<li>
+							<a class="submenu-link" href="#">{{ auth.user['Fname'] }}</a>
+							<ul class="submenu">
+								<li style="text-align:center;">
+									<a style="color:black;border:none;" href="">LogOut</a>
+								</li>
+							</ul>
+						</li>
+					{% endif %}
 				</ul>
 			</div>
 		</main>
 		{% block content %}{% endblock %}
 	</body>
-
-</html>
+</html></body></html>
