--- a/application/views/base.html
+++ b/application/views/base.html
@@ -54,7 +54,8 @@
 							<a class="submenu-link" href="#">{{ auth.user['Fname'] }}</a>
 							<ul class="submenu">
 								<li style="text-align:center;">
-									<a style="color:black;border:none;" href="">LogOut</a>
+									<a style="color:black;border:none;" href="/SignOut">Sign out</a>
+
 								</li>
 							</ul>
 						</li>
