--- a/application/views/Cart.html
+++ b/application/views/Cart.html
@@ -13,7 +13,7 @@
 		{% for item in cart_content %}
 			<aside>
 				<div class="content-data" id="{{item.id}}">
-					<img align="left" hspace="5" src="{{item.Image}}">
+					<img align="left" hspace="5" src="../../images/{{item.Image}}">
 					<p>Название -
 						{{item.Name}}</p>
 					<p>Количество -
