--- a/application/views/base.html
+++ b/application/views/base.html
@@ -30,7 +30,7 @@
 								<ul class="submenu">
 									{% for cat in catalog_buff %}
 										<li style="text-align:center;">
-											<a style="color:black;border:none;" href="/catalog/{{cat.id}}">{{cat.Name}}</a>
+											<a style="word-wrap:break-word;color:black;border:none;" href="/catalog/{{cat.id}}">{{cat.Name}}</a>
 										</li>
 									{% endfor %}
 								</ul>
